--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "mysql2": "^1.4.2",
     "sequelize": "^4.22.5",
     "react": "^16.2.0",
-    "react-bootstrap": "^0.31.5"
+    "react-bootstrap": "^0.31.5",
+    "nodeadmin": "^0.1.2"
   }
 }
